--- a/index.html
+++ b/index.html
@@ -92,25 +92,25 @@
             </div>
 
             <div class="projeto ativo">
-                <a href="#" target="_blank">
-                    <img src="src/imagens/foto-loading.jpeg" alt="Projeto listagem de" />
-                    <h3>Projeto 3</h3>
+                <a href="https://luiz0032.github.io/mini-portfolio/" target="_blank">
+                    <img src="src/imagens/mini-porfolio.png" alt="Projeto listagem de" />
+                    <h3>Mini - currículo</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
-                        <p></p>
-                        <p></p>
+                        <p>Site com uma breve apresentação minha</p>
+                        <p>🔗 Ver no GitHub Pages</p>
                     </div>
                 </a>
             </div>
 
             <div class="projeto ativo">
-                <a href="#" target="_blank">
-                    <img src="src/imagens/foto-loading.jpeg" alt="Projeto listagem de" />
-                    <h3>Projeto 3</h3>
+                <a href="https://luiz0032.github.io/Tabela-de-precos/" target="_blank">
+                    <img src="src/imagens/tabela-de-precos.png" alt="Projeto listagem de" />
+                    <h3>Tabela de preços</h3>
                     <div class="informacoes-projeto">
-                        <p>Em desenvolvimento</p>
-                        <p></p>
-                        <p></p>
+                        <p>Projeto feito usando HTML e CSS</p>
+                        <p>Tabela de preços e seus benefícios</p>
+                        <p>🔗 Ver no GitHub Pages</p>
                     </div>
                 </a>
             </div>
